Added delete functionality to the eventand added exports to CSV

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
-.App {
-  text-align: center;
+.driver1 {
+  background: purple;
+}
+.driver2 {
+  background: orange;
+}
+.driver3 {
+  background: green;
+}
+
+.csv-export {
+  float: right;
+  margin-right: 40px;
+  margin-top: 30px;
 }
