--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,15 @@
   float: right;
   margin-right: 40px;
   margin-top: 30px;
+  background-color: blue;
+  font-size: 14px;
+  font-weight: 500;
+  height: 52px;
+  line-height: 20px;
+  padding: 0 10px;
+  border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: all 0.3s ease 0s;
 }
